kubernetes-efk-stack/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elastic-logging
  annotations:
    kubernetes.io/ingress.class: "nginx"  # or your Ingress controller class
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: kibana-tls
    hosts:
    - kibana.domain.com
  rules:
  - host: kibana.domain.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: kibana
            port:
              number: 5601
